jwt + ajout de fonctions chercher user par mail
